# mlx-assistant

./: .gitignore  README.md  main.py  pyproject.toml
services/: speech_to_text.py  text_gen.py
